language/move-lang/tests/move_check/typing/extraneous_acquire.exp
error: 

   ┌── tests/move_check/typing/extraneous_acquire.move:5:19 ───
   │
 5 │     t0() acquires R1 {
   │                   ^^ Invalid 'acquires' list. The resource '0x8675309::M::R1' was never acquired by 'move_from', 'borrow_global', 'borrow_global_mut', or a transitive call
   │

error: 

   ┌── tests/move_check/typing/extraneous_acquire.move:9:33 ───
   │
 9 │     t1(a: address) acquires R1, R2 {
   │                                 ^^ Invalid 'acquires' list. The resource '0x8675309::M::R2' was never acquired by 'move_from', 'borrow_global', 'borrow_global_mut', or a transitive call
   │

